# Scam-Investigator-Bot

./: Cargo.toml  README.md
src/: main.rs
src/Embeds/: cprompt.rs  scam_log.rs
src/Events/: lbp_interactions.rs  on_ticket_closed.rs
src/Services/: Services  events_service.rs
