[package]
name = "Scam-Investigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.7"
redis = {version = "0.23.3", features = ["aio", "tokio-comp"]}
serde = "1.0.193"
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["rt-multi-thread","process"]}
